--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,9 +3,11 @@ main = "src/worker.js"
 compatibility_date = "2024-09-23"
 
 # Cloudflare Workers with Assets configuration
-# https://developers.cloudflare.com/workers/static-assets/
+# https://developers.cloudflare.com/workers/static-assets/routing/single-page-application/
 [assets]
 directory = "./public"
 binding = "ASSETS"
 # Enable SPA fallback - serve index.html for 404s instead of redirecting
 not_found_handling = "single-page-application"
+# Only run the worker for API routes - all other routes use SPA fallback
+run_worker_first = ["/api/*"]
